.kustomization/components/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobsched-api
  labels:
    app: jobsched-api
    framework: flask
  annotations:
    a8r.io/description: job scheduler API
    a8r.io/owner: renatodamas

spec:
  replicas: 2

  selector:
    matchLabels:
      app: jobsched-api

  strategy:
    # Update each pod at a time and prevent
    # additional pods from created
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 0

  template:
    metadata:
      labels:
        app: jobsched-api
    spec:
      containers:
        - name: jobsched-api
          image: jobsched-api:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: pbs
              mountPath: /opt/pbs
            - name: munge-key
              mountPath: /etc/munge/munge.key
            - name: munge-run
              mountPath: /run/munge
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              add: [ ]
      serviceAccountName: jobsched-api
      restartPolicy: Always
      volumes:
        - name: pbs
          hostPath:
            path: /opt/pbs
            type: Directory
        - name: pbs-config
          hostPath:
            path: /etc/pbs.conf
            type: File
        - name: munge-run
          emptyDir: {}
        - name: munge-key
          secret:
            secretName: munge-key
            defaultMode: 0400
